fix(baseurl): not sure if this will work but made baseurl an absolute link

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Identifying/contact information.
 name:    thehalfyak
-baseurl: chiragbharadwaj.github.io
+baseurl: https://chiragbharadwaj.github.io
 url:     https://www.thehalfyak.pro
 github:  https://github.com/chiragbharadwaj/chiragbharadwaj.github.io
 
